--- a/donarsangre/donarsangre/sitio/templates/inicio.html
+++ b/donarsangre/donarsangre/sitio/templates/inicio.html
@@ -6,10 +6,11 @@
 {% block content %}
 {% if user.is_authenticated %}
   Hola {{ user.username }}!
-  <p><a href="{% url 'logout' %}">Log Out</a></p>
+  <p><a href="{% url 'logout' %}">Cerrar sesión</a></p>
 {% else %}
   <p>donarsangre.com</p>
-  <a href="{% url 'login' %}">Log In</a>
+  <p><a href="{% url 'login' %}">Iniciar sesión</a></p>
+  <p><a href="{% url 'registro' %}">Registrarse</a></p>
 {% endif %}
 <p>
     <a href="{% url 'informacion' %}">Información importante!</a>
