--- a/donarsangre/donarsangre/sitio/templates/registration/signup.html
+++ b/donarsangre/donarsangre/sitio/templates/registration/signup.html
@@ -1,13 +1,14 @@
 <!-- templates/registration/signup.html -->
 {% extends "base.html" %}
 
-{% block title %}Sign Up{% endblock %}
+{% block title %}Registrarse{% endblock %}
 
 {% block content %}
   <h2>Sign up</h2>
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Sign Up</button>
+    <button type="submit">Registrarse</button>
   </form>
+  <p> <a href="{% url 'inicio' %}">Home</a> </p>
 {% endblock %}
