--- a/donarsangre/donarsangre/sitio/templates/inicio.html
+++ b/donarsangre/donarsangre/sitio/templates/inicio.html
@@ -7,6 +7,7 @@
 {% if user.is_authenticated %}
   Hola {{ user.username }}!
   <p><a href="{% url 'logout' %}">Cerrar sesión</a></p>
+  <a href="{% url 'admin:index' %}">Administrador</a>
 {% else %}
   <p>donarsangre.com</p>
   <p><a href="{% url 'login' %}">Iniciar sesión</a></p>
