Cambios de front

--- a/donarsangre/sitio/templates/base.html
+++ b/donarsangre/sitio/templates/base.html
@@ -3,12 +3,64 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>{% block title %}Django Auth Tutorial{% endblock %}</title>
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+
+
+
 </head>
 <body>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="{% url 'inicio' %}">
+        <font color="red">
+          <b>
+            doná sangre hoy!
+          </b>
+        </font>
+       </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        {% if user.is_authenticated %}
+          <li class="nav-item flex-fill">   
+              <p><center>
+                Hola <b> {{ user.username }}!</b> 
+              </center></p>
+          </li>
+          <li class="nav-item">
+            <a href="{% url 'logout' %}"class="btn btn-outline-dark btn-sm" button style="margin: 10px">Cerrar sesión</a>
+          </li>
+          <li>
+            <a href="{% url 'admin:index' %}" class="btn btn-outline-dark btn-sm" button style="margin: 10px">Administrador</a>
+          </li>
+        {% else %}
+          <li class="nav-item">
+            <a href="{% url 'login' %}" class="btn btn-outline-dark btn-sm" button style="margin: 10px">Iniciar sesión</a>
+          </li>
+          <li>
+            <a href="{% url 'registro' %}" class="btn btn-outline-dark btn-sm" button style="margin: 10px">Registrarse</a>
+          </li>
+        {% endif %}
+        <li class="nav-item">
+          <a href="{% url 'informacion' %}" class="btn btn-outline-dark btn-sm" button style="margin: 10px">Información importante</a>
+        </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  
   <main>
     {% block content %}
+    
     {% endblock %}
   </main>
+
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js" integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa" crossorigin="anonymous"></script>
 </body>
 </html>
