--- a/donarsangre/sitio/templates/inicio.html
+++ b/donarsangre/sitio/templates/inicio.html
@@ -1,20 +1,28 @@
 <!-- templates/home.html-->
 {% extends 'base.html' %}
 
-{% block title %}Home{% endblock %}
-
+{% block title %}DonaSangreHoy!{% endblock %}
 {% block content %}
-{% if user.is_authenticated %}
-  Hola {{ user.username }}!
-  <p><a href="{% url 'logout' %}">Cerrar sesión</a></p>
-  <a href="{% url 'admin:index' %}">Administrador</a>
-{% else %}
-  <p>donarsangre.com</p>
-  <p><a href="{% url 'login' %}">Iniciar sesión</a></p>
-  <p><a href="{% url 'registro' %}">Registrarse</a></p>
-{% endif %}
-<p>
-    <a href="{% url 'informacion' %}">Información importante!</a>
-</p>
-
+<br>
+<br>
+<br>
+  <figure class="text-center">
+    <blockquote class="blockquote">
+      <p><b>
+        Nuestro sitio está evolucionando...
+      </b></p>
+    </blockquote>
+    <figcaption class="blockquote-footer">
+      <font color="red">
+        <b>
+          Queremos que solicitantes y donantes de sangre se encuentren.
+        </b>
+      </font>
+    </figcaption>
+    <figcaption class="blockquote-footer">
+      Te invitamos a visitar la sección de información importante:
+    </figcaption>
+    </text>
+    <a href="{% url 'informacion' %}" class="btn btn-outline-dark btn-sm" button style="margin: 10px">Información importante</a>
+  </figure>
 {% endblock %}
