--- a/donarsangre/sitio/templates/registration/login.html
+++ b/donarsangre/sitio/templates/registration/login.html
@@ -4,12 +4,15 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
-<h2>Log In</h2>
-<form method="post">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <button type="submit">Iniciar sesión</button>
-</form>
-<p> <a href="{% url 'registro' %}">Registrarse</a> </p>
-<p> <a href="{% url 'inicio' %}">Volver</a> </p>
-{% endblock %}
+<figure class="text-center">
+  <br>
+  <br>
+  <h2>Iniciar sesión</h2>
+  <br>
+  <form method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button class="btn btn-outline-dark btn-sm" type="submit">Iniciar sesión</button>
+  </form>
+  {% endblock %}
+</figure>
