--- a/donarsangre/sitio/templates/registration/signup.html
+++ b/donarsangre/sitio/templates/registration/signup.html
@@ -4,11 +4,11 @@
 {% block title %}Registrarse{% endblock %}
 
 {% block content %}
-  <h2>Sign up</h2>
+  <h2>Registro</h2>
+  <br>
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Registrarse</button>
+    <button class="btn btn-outline-dark btn-sm" type="submit">Registrarse</button>
   </form>
-  <p> <a href="{% url 'inicio' %}">Home</a> </p>
 {% endblock %}
