--- a/donarsangre/sitio/templates/base.html
+++ b/donarsangre/sitio/templates/base.html
@@ -48,6 +48,12 @@
         <li class="nav-item">
           <a href="{% url 'informacion' %}" class="btn btn-outline-dark btn-sm" button style="margin: 10px">Información importante</a>
         </li>
+        {% if user.is_authenticated %}
+        <li>
+          <a href="{% url 'user_posts' %}" class="btn btn-outline-danger btn-sm" button style="margin: 10px">Tus solicitudes</a>
+        </li>
+        {% endif %}
+
         </ul>
       </div>
     </div>
@@ -59,6 +65,8 @@
     
     {% endblock %}
   </main>
+
+  <br><br><br>
 
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js" integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa" crossorigin="anonymous"></script>
