Añadido filtro para que inicio solo muestre solicitudes vigentes Añadido campo de litros requeridos a las solicitudes y el formulario Reiniciadas las migraciones por un error local, revisar compatibilidad Corregida la visualización de grupo y factor de sangre en las solicitudes mostradas en inicio Añadido pillow version 10.0.0 a requirements por el manejo de imagenes (no implementado actualmente) Editados multiples archivos para refactorizar una variable Editado formato de muestra de solicitudes

--- a/donarsangre/sitio/templates/new_post.html
+++ b/donarsangre/sitio/templates/new_post.html
@@ -15,8 +15,12 @@
         {{form.blood_type}}   <br><br>
       </div>
       <div>
+	<b>¿Cuantos litros requiere? *<b><br>
+	{{ form.liters_required }} <br><br>
+      </div>
+      <div>
         <b>¿Dónde? *<br></b>
-        {{form.ubication}}  <br><br>
+        {{form.location}}  <br><br>
       </div>
       <div>
         <b>Agregá toda la información que consideres necesaria: *</b><br>
@@ -28,11 +32,11 @@
       <div>
         <b>Fecha de finalización del pedido * </b><br>
         {{form.expiration_date}} <br><br>
-      </div>  
+      </div>
       <button type="submit" class="btn btn-outline-danger"">Guardar</button>
       <br>
   </form>
 
 </div>
-    
+
 {% endblock %}
