--- a/donarsangre/sitio/templates/base.html
+++ b/donarsangre/sitio/templates/base.html
@@ -13,7 +13,7 @@
 <body>
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="{% url 'inicio' %}">
+      <a class="navbar-brand" href="{% url 'home' %}">
         <font color="red">
           <b>
             doná sangre hoy!
@@ -26,9 +26,9 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         {% if user.is_authenticated %}
-          <li class="nav-item flex-fill">   
+          <li class="nav-item flex-fill">
               <p><center>
-                Hola <b> {{ user.username }}!</b> 
+                Hola <b> {{ user.username }}!</b>
               </center></p>
           </li>
           <li class="nav-item">
@@ -59,10 +59,10 @@
     </div>
   </nav>
 
-  
+
   <main>
     {% block content %}
-    
+
     {% endblock %}
   </main>
 
