--- a/donarsangre/sitio/templates/user_posts.html
+++ b/donarsangre/sitio/templates/user_posts.html
@@ -17,7 +17,7 @@
     <b>{{ post.blood_type }} | acá debería ir el tipo de sangre pero muestra el id. </b> <br>
     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
         <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"></path>
-    </svg><b>{{ post.ubication }}</b>  <br><br>
+    </svg><b>{{ post.location }}</b>  <br><br>
     Finaliza: {{post.expiration_date|date:"d/m/Y"}} <br>
     <button type="button" class="btn btn-dark btn-sm" button style="margin: 10px">ver detalle</button>
     <br>
@@ -28,5 +28,5 @@
 {% endfor %}
 
 </div>
-    
+
 {% endblock %}
