--- a/donarsangre/sitio/templates/user_posts.html
+++ b/donarsangre/sitio/templates/user_posts.html
@@ -25,14 +25,12 @@
     <br>
     <h6>Creada: {{ post.created_date|date:"d/m/Y" }}</h6>
     <h6>Finaliza: {{post.expiration_date|date:"d/m/Y"}}</h6>
-    <button type="button" class="btn btn-dark btn-sm" button style="margin: 10px">ver detalle</button>
+    <a href="{% url 'post_detail' pk=post.pk %}" class="btn btn-dark btn-sm" button style="margin: 10px">ver detalle</a>
     <br>
     <button type="button" class="btn btn-danger btn-sm" button style="margin: 10px">Eliminar</button>
 
     <h5>_______________________________________</h5>
 </div>
 {% endfor %}
-
-</div>
 
 {% endblock %}
