-Corregido un error con la muestra de imagenes -Modificado el modelo de tipos de sangre --Ahora estos se cargan en la base de datos como las localidades --editados todos los archivos pertinentes a razon de este cambio -Implementado parcialmente el sistema de filtros --Funcionan los filtros de factor y grupo sanguineo y de localidad

--- a/donarsangre/sitio/templates/new_post.html
+++ b/donarsangre/sitio/templates/new_post.html
@@ -28,13 +28,14 @@
         {{form.body}} <br><br>
       </div>
       <div>
+        <b>Imagen opcional:</b><br>
         {{form.photo}} <br><br>
       </div>
       <div>
         <b>Fecha de finalización del pedido * </b><br>
         {{form.expiration_date}} <br><br>
       </div>
-      <button type="submit" class="btn btn-outline-danger"">Guardar</button>
+      <button type="submit" class="btn btn-outline-danger">Guardar</button>
       <br>
   </form>
 
