--- a/donarsangre/sitio/templates/post_detail.html
+++ b/donarsangre/sitio/templates/post_detail.html
@@ -5,15 +5,17 @@
   <br>
   <h5>_______________________________________</h5>
   <h6 style="color:red;">Solicitante: {{ post.author }}</h6>
-  <h4> <b> Grupo y factor requerido: <b style="color:red;">{{ post.get_blood_type_display }}</b></b></h4>
+  <h4> <b> Grupo y factor requerido: <b style="color:red;">{{ post.blood_type }}</b></b></h4>
   <h4> <b> Litros requeridos: <b style="color:red;">{{ post.liters_required }} </b></b> </h4>
   <br>
   <h5> <b> {{ post.title|upper }} </b> </h5>
   <h6> {{ post.body }} </h6>
   <br>
+  {% if post.photo.url is not None %}
   <img src="{{ MEDIA_URL }}{{ post.photo.url }}" style="max-height:300px"></img>
   <br>
   <br>
+  {% endif %}
   <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
       <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"></path>
   </svg>
