- Corrección entrega2: se agrega lógica para activar usuarios vía mail.

--- a/donarsangre/sitio/templates/base.html
+++ b/donarsangre/sitio/templates/base.html
@@ -43,7 +43,7 @@
             <a href="{% url 'login' %}" class="btn btn-outline-dark btn-sm" button style="margin: 10px">Iniciar sesión</a>
           </li>
           <li>
-            <a href="{% url 'registro' %}" class="btn btn-outline-dark btn-sm" button style="margin: 10px">Registrarse</a>
+            <a href="{% url 'register' %}" class="btn btn-outline-dark btn-sm" button style="margin: 10px">Registrarse</a>
           </li>
         {% endif %}
         <li class="nav-item">
