--- a/donarsangre/sitio/templates/post_detail.html
+++ b/donarsangre/sitio/templates/post_detail.html
@@ -6,7 +6,17 @@
   <h5>_______________________________________</h5>
   <h6 style="color:red;">Solicitante: {{ post.author }}</h6>
   <h4> <b> Grupo y factor requerido: <b style="color:red;">{{ post.blood_type }}</b></b></h4>
-  <h4> <b> Litros requeridos: <b style="color:red;">{{ post.liters_required }} </b></b> </h4>
+  <h5> <b> Litros requeridos: <b style="color:red;">{{ post.liters_required }} </b></b> </h5>
+  <h5> <b> Litros donados: <b style="color:red;">{{ post.liters_donated }} </b></b> </h5>
+  <br>
+  <div style="margin:5px 600px">
+    <div class="progress" role="progressbar" aria-label="Danger example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+      <div class="progress-bar bg-danger" style="width: 100%">100%</div>
+    </div>
+  </div>
+
+ 
+
   <br>
   <h5> <b> {{ post.title|upper }} </b> </h5>
   <h6> {{ post.body }} </h6>
