--- a/donarsangre/sitio/templates/post_list.html
+++ b/donarsangre/sitio/templates/post_list.html
@@ -2,13 +2,7 @@
 <div align="center">
     <br>
     <h4> <b> {{ post.blood_type }} | {{ post.liters_required }} L</b> </h4>
- 
-    <div style="margin:5px 650px">
-        <div class="progress" role="progressbar" aria-label="Danger example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-          <div class="progress-bar bg-danger" style="width: 100%">100%</div>
-        </div>
-      </div>
-    
+    <h6> <b> Litros donados: <b style="color:red;">{{post.liters_donated}} </b></b> </h6>
     <br>
     <h5> <b> {{ post.title|upper }} </b> </h5>
     <h6> {{ post.body|truncatechars:20 }} </h6>
