Base para busqueda (falta probar)

--- a/donarsangre/sitio/templates/base.html
+++ b/donarsangre/sitio/templates/base.html
@@ -27,6 +27,9 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+	<li class="nav-item">
+          <a href="/search" class="btn btn-outline-dark btn-sm" button style="margin: 10px">Buscar pedidos</a>
+        </li>
         {% if user.is_authenticated %}
           <li class="nav-item flex-fill">
               <p><center>
