--- a/donarsangre/sitio/templates/post_detail.html
+++ b/donarsangre/sitio/templates/post_detail.html
@@ -5,7 +5,7 @@
 	<style type="text/css">
           #map{ width:600px; height: 350px; }
         </style>
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBSHD4vrWK98EPYTW8Ziu0alqTvXlpRrto&callback=initMap" async defer></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key={{ GOOGLE_API_KEY }}&callback=initMap" async defer></script>
 	<script type="text/javascript" src="{% static "postViewMap.js" %}"></script>
   <script>
 		window.onload = function() {
@@ -41,7 +41,7 @@
   <br>
   <br>
 
-  <a href="https://twitter.com/intent/tweet?hashtags=donasangrehoy&url=donasangrehoy.onrender.com/detail/{{post.pk}}&text={{ post.title }} - {{post.location}}" 
+  <a href="https://twitter.com/intent/tweet?hashtags=donasangrehoy&url=donasangrehoy.onrender.com/detail/{{post.pk}}&text={{ post.title }} - {{post.location}}"
   class="twitter-share-button" data-show-count="false"></a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
   <br>
