Fix de carga de posts

--- a/donarsangre/sitio/templates/new_post.html
+++ b/donarsangre/sitio/templates/new_post.html
@@ -35,8 +35,8 @@
       <div>
         <b>¿Ubicación del establecimiento? *<br></b>
         <div id="map"></div>
-	<input hidden="true" type="text" id="id_latitud" readonly="yes"><br>
-    	<input hidden="true" type="text" id="id_longitud" readonly="yes">
+	<input hidden="true" type="text" id="id_latitud" name="latitud" readonly="yes" value="-31.252606961483437"><br>
+    	<input hidden="true" type="text" id="id_longitud" name="longitud" readonly="yes" value="-61.49176597595215">
 
       </div>
       <div>
